--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Neuton&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet"> 
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
